Issue: https://github.com/socialsensingbot/frontend/issues/84 Issue Description: Explanations of terminology on screen/methodology behind tweet collection First draft of inline tooltips and help.

--- a/src/app/help/help-dialog.component.scss
+++ b/src/app/help/help-dialog.component.scss
@@ -1,4 +1,5 @@
 .help-dialog-outer {
+  display: flex;
   align-items: stretch;
   flex-direction: column;
   justify-content: center;
@@ -7,6 +8,7 @@
   width: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 
   .help-dialog-content {
     display: flex;
@@ -16,6 +18,7 @@
     overflow-x: hidden;
 
     .help-dialog-iframe {
+      display: flex;
       border: none;
       max-width: 100%;
       max-height: 100%;
